# auralis

./: .gitignore  README.md  ROADMAP.md  demo.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
notebooks/: 02_evaluation.ipynb  02_evaluation_executed.ipynb  03_diagnosis.ipynb
scripts/: demo_compare.py  demo_test3.py  evaluate_extended.py  evaluate_extended_male.py  evaluate_separator.py  evaluate_v3.py
src/: pipeline.py  utils.py
src/ai/: attention.py  classifier.py  dpcrn.py  gmm_classifier.py  mask_net.py  smoothing.py  smoothing_gru.py  train.py  train_gmm.py  train_mask_net.py  train_separator.py  train_smoothing.py
src/dsp/: augment.py  dataset.py  enhancement.py  features.py  nmf_separation.py  separation.py  stft.py
tests/: test_augment.py  test_features.py  test_pipeline.py  test_utils.py
